--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,6 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/oadb?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
-jdbc.username=root
-jdbc.password=root
+
+
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/oadb?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
+#jdbc.username=root
+#jdbc.password=root
